k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bhw-24
  labels:
    app: bhw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bhw
  namespace: bhw-24
  labels:
    app: bhw
spec:
  selector:
    matchLabels:
      app: bhw
  template:
    metadata:
      labels:
        app: bhw
    spec:
      imagePullSecrets:
        - name: bhw-ghcr
      containers:
        - name: bhw
          image: ghcr.io/bath-bcss/bath-hack-website:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 100m
          readinessProbe:
            timeoutSeconds: 3
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 8080
          livenessProbe:
            timeoutSeconds: 3
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bhw-svc
  namespace: bhw-24
  labels:
    app: bhw
spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 8081
  selector:
    app: bhw
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bhw-ingress
  namespace: bhw-24
  labels:
    app: bhw
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hack-api.bathcs.com
      secretName: hack-api-bathcs-tls
  rules:
    - host: hack-api.bathcs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bhw-svc
                port:
                  number: 8081
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: bhw-policy
  namespace: bhw-24
  labels:
    app: bhw
spec:
  podSelector:
    matchLabels:
      app: bhw
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bhw-24-redis
          podSelector:
            matchLabels:
              app: bhw-redis
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - to:
      - ipBlock:
          cidr: 34.64.0.0/10
    - to:
      - ipBlock:
          cidr: 195.154.197.252/32
    - to:
      - ipBlock:
          cidr: 51.158.0.0/15
