k8s/postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bhw-24-db
  labels:
    app: bhw-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: bhw-24-db
  labels:
    app: bhw-postgres
spec:
  selector:
    matchLabels:
      app: bhw-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bhw-postgres
    spec:
      containers:
        - image: postgres:alpine
          name: bhw-postgres
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-storage
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: bhw-24-db
  labels:
    app: bhw-postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: postgres-policy
  namespace: bhw-24-db
  labels:
    app: bhw-postgres
spec:
  podSelector:
    matchLabels:
      app: bhw-postgres
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bhw-24
          podSelector:
            matchLabels:
              app: bhw
      ports:
        - protocol: TCP
          port: 5432
  egress: []
