k8s/redis.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bhw-24-redis
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-policy
  namespace: bhw-24-redis
  labels:
    app: bhw-redis
spec:
  podSelector:
    matchLabels:
      app: bhw-redis
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bhw-24
          podSelector:
            matchLabels:
              app: bhw
      ports:
        - protocol: TCP
          port: 6379
  egress: []
